refactor: deprecated class usage removed
Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>